# vidsum

./: .gitignore  README.md  setup.cfg
vidsum/: __main__.py
