[metadata]
name = vidsum
home-page = https://github.com/OpenGenus/vidsum
summary = Generate summary of any video anywhere and anytime 
description-file = 
    README.md
author = OpenGenus
author-email = team@opengenus.org
licence = GNU General Public License v3 (GPLv3)
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    vidsum

[entry_points]
console_scripts =
    vidsum = vidsum.__main__:main

[wheel]
universal = 1
